--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -8,18 +8,20 @@
     - tmux
     - i2c-tools
     - python-smbus
-    - vim   
-    - git 
-    - samba 
+    - vim
+    - git
+    - samba
     - samba-common-bin
     - rpi-update
+    - python-apt
+    - python3-apt
 - name: ensure avahi-daemon is running (and enable it at boot)
   service: name=avahi-daemon state=started enabled=yes
 - name: ensure netatalk is running (and enable it at boot)
   service: name=netatalk state=started enabled=yes
 - name: Configure wifi
   lineinfile:
-    dest: /etc/wpa_supplicant/wpa_supplicant.conf 
+    dest: /etc/wpa_supplicant/wpa_supplicant.conf
     regexp: "{{ item.regexp }}"
     line: "{{ item.line }}"
   with_items:
@@ -43,7 +45,7 @@
     line: "{{ item.line }}"
   with_items:
     - { regexp: '^decode_WVC1', line: '{{decode_WVC1}}' }
-  when: decode_WVC1 != '' 
+  when: decode_WVC1 != ''
 - name: set to runlevel 3 by default
   command: /bin/systemctl set-default -f multi-user.target
 - name: resize filesystem
