--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 host_key_checking=False
-hostfile = hosts
+inventory = hosts
 remote_user = pi
-[ssh_connection] 
+[ssh_connection]
 ssh_args = -o ServerAliveInterval=30 -o ControlMaster=auto -o ControlPersist=60s
